<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">RecipeWorld</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_out">Sign out</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_profile_update">Profile Update</string>
    <string name="menu_listRecipe">List of recipes</string>
    <string name="menu_addRecipe">Add a recipe</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="close">Close</string>
    <string name="save">Save</string>
    <string name="recipe_ingredients">Recipe Ingredients:</string>
    <string name="recipe_steps">Recipe Steps:</string>
    <string name="recipe_name">Recipe Name:</string>
    <string name="take_picture">take picture</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Registering_succeed">"Registering succeed"</string>
    <string name="error_authentication_canceled">"Registering failed : Authentification canceled"</string>
    <string name="error_no_internet">"Registering failed : No Internet ! Please check your internet Registering "</string>
    <string name="error_unknown_error">"Registering failed : Unknown error"</string>
    <string name="info_no_email_found">"no email found"</string>
    <string name="info_no_username_found">"no username found"</string>
    <string name="facebook_app_id">1334664476735308</string> <string name="fb_login_protocol_scheme">fb1334664476735308</string>
        <!-- FACEBOOK PURPOSE -->
        <string name="facebook_application_id" translatable="false">1334664476735308</string>
        <string name="facebook_login_protocol_scheme" translatable="false" tools:ignore="UnusedResources">fb1334664476735308</string>
</resources>
