<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.recipeworld.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_listRecipes"
        android:name="com.example.recipeworld.ui.RecipeList.RecipeListFragment"
        android:label="@string/menu_listRecipe"
        tools:layout="@layout/fragment_recipelist" />

    <fragment
        android:id="@+id/nav_addRecipe"
        android:name="com.example.recipeworld.ui.send.AddRecipe"
        android:label="@string/menu_addRecipe"
        tools:layout="@layout/fragment_addrecipe" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.recipeworld.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.recipeworld.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.recipeworld.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />


</navigation>
